--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@giphy/react-native-sdk": "^1.7.1",
     "ethers": "^5.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
