--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-spring": "^9.4.4"
+    "react-spring": "^9.4.4",
+    "react-toastify": "^9.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
